--- a/index.html
+++ b/index.html
@@ -277,11 +277,11 @@ Redistribution and use in source and binary forms, with or without modification,
   </div>
 
   <div class="row">
-    <div class="col-md-12 col-lg-6 col-xs-12 col-sm-12 pl-5 pr-5">
+    <div class="col-md-12 col-lg-6 col-xs-12 col-sm-12 pl-5">
       <img src="images/graph.jpg" class="img-fluid " alt="">
     </div>
 
-    <div class="col-md-12 col-lg-6 col-xs-12 col-sm-12 pr-5 pl-5">
+    <div class="col-md-12 col-lg-6 col-xs-12 col-sm-12 pl-5">
       <nav class="nav  nav-pills flex-column custom-card1">
             <a class="nav-link active" href="#ninja" data-toggle="tab">What services does Random Eksentrik provide?</a>
             <a class="nav-link" href="#wizard" data-toggle="tab">How do I know if Eksentrik can help me?</a>
